@@ -1,3 +1,11 @@
+2004-05-06  Bryce McKinlay  <mckinlay@redhat.com>
+
+	* defineclass.cc (_Jv_ClassReader::prepare_pool_entry): Use 
+	verify_field_signature and verify_method_signature, not 
+	_Jv_VerifyFieldSignature and _Jv_VerifyMethodSigntature.
+	(_Jv_ClassReader::handleField): Likewise.
+	(_Jv_ClassReader::handleMethod): Likewise.
+
 2004-05-06  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/table/TableColumn.java:
